# antigate

./: LICENSE  antigate.cabal
Text/Recognition/: Antigate.hs
